# multi_cctv_object_detection

./: .gitignore  CMakeLists.txt  README.md  alarm.conf  alarm_config.json  app.ini  cctv.config  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Handler.h  Windowhandler.h  alarm.h  cctv.h  configHandler.h  getFrame.h  inference.h  iniHandler.h  read_config.h  thread_safe_queue.h  thread_safe_stack.h
resource/: alarm.conf  app.ini
src/: Handler.cpp  WindowHandler.cpp  alarm.cpp  cctv.cpp  configHandler.cpp  getFrame.cpp  inference.cpp  iniHandler.cpp  main.cpp  prev_main.cpp  read_config.cpp
test/: CMakeLists.txt  sanity  test.cpp
test/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
